--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <section >
         <div class="container-fluid">
             <div id="splash" class="row">
+                <button type="text" class="datepicker btn-floating btn-large waves-effect waves-light red">When</button>
                 <div class="col s12 yourdiv test2">
                     <button id="start" class="btn-floating btn-large pulse"><i class="fas fa-heart"></i></button>
                     <div>Let's plan your awesome date</div>
