--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- content rendered dynamically here -->
     </section>
 
-    <section >
+    <section>
         <div class="container-fluid">
             <div id="splash" class="row">
                 <div class="col s12 yourdiv test2">
@@ -35,7 +35,7 @@
 
 
     <section>
-        
+
         <!-- just some neat placeholder buttons to test 
         <div class="row iconRow" id="menu1">
             <div class="col s4 l4 icons">
@@ -62,13 +62,13 @@
             <h5 id="city">hello cleveland!</h5>
             <!-- confirm the ity -->
             <div id="confirm">
-                <button class="locationYes">yes</button>
-                <button id="locationNo">no</button>
+                <button id="locationYes" class="waves-effect waves-light btn">yes</button>
+                <button id="locationNo" class="waves-effect waves-light btn">no</button>
                 <!-- if no, input the city by user -->
                 <div class="input-field" id="cityForm" style="display: none">
                     <input placeholder="Placeholder" id="first_name" type="text" class="validate">
                     <label for="your_city">Optional Your City</label>
-                    <button class="locationYes">oops... nevermind</button>
+                    <button id="locationYes" class="waves-effect waves-light btn">oops... nevermind</button>
                 </div>
             </div>
         </div>
@@ -77,39 +77,65 @@
         <div id="eventsOptions" class="testContainer">
             <h5>What events are you interested in?</h5>
             <div id="btn-events">
-            <button class="btn-events">music</button>
-            <button class="btn-events">theater</button>
-            <button class="btn-events">escape rooms</button>
-            <button class="btn-events">science</button>
-            <button class="btn-events">art</button>
-            <button class="btn-events">dance</button>
-            <button class="btn-events">sports</button>
-        </div>
+                <button class="btn-events waves-effect waves-light btn">music</button>
+                <button class="btn-events waves-effect waves-light btn">theater</button>
+                <button class="btn-events waves-effect waves-light btn">escape rooms</button>
+                <button class="btn-events waves-effect waves-light btn">science</button>
+                <button class="btn-events waves-effect waves-light btn">art</button>
+                <button class="btn-events waves-effect waves-light btn">dance</button>
+                <button class="btn-events waves-effect waves-light btn">sports</button>
+            </div>
             <!-- submit button -->
 
-            <div style="margin-top: 2em"><button id="eventSearch">Go</button></div>
+            <div style="margin-top: 2em"><button id="eventSearch" class="waves-effect waves-light btn">Go</button></div>
 
         </div>
         <!-- show us the events -->
-        <div class="testContainer">
-            <div id="paramsList"></div>
-            <div id="eventsList"></div>
+        <div class="testContainer container-fluid" style="padding: 0;">
+            <div id="eventsList" class="row" style="margin: auto; width: 100%; background: lightgreen">
+                <!-- show events here -->
+            </div>
         </div>
     </section>
 
     <div class="overlay">
-    <div class="loader " style="width: 60%; margin: auto; min-width: 200px;">
+        <div class="loader " style="width: 60%; margin: auto; min-width: 200px;">
             <div class="progress">
-                    <div class="indeterminate"></div>
-                </div>
-                <div id="loaderText">Loading something awesome...</div>
-                
+                <div class="indeterminate"></div>
+            </div>
+            <div id="loaderText">Loading something awesome...</div>
+
+        </div>
     </div>
-</div>
+
+    <!-- Modal Structure -->
+
+    <!-- Modal Trigger -->
+    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Event Name</h4>
+            <p>Event Details</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+        </div>
+    </div>
+
+
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="assets/js/main.js"></script>
+
+    <script>
+        // Or with jQuery
+
+        $(document).ready(function () {
+            $('.modal').modal();
+        });
+    </script>
 </body>
 
 </html>
