--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link type="text/css" rel="stylesheet" href="assets/css/style.css" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Firebase Link-->
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
 </head>
 
 <body>
@@ -94,6 +96,12 @@
         <div class="testContainer">
             <div id="paramsList"></div>
             <div id="eventsList"></div>
+        </div>
+
+        <div class="recentEvents">
+            <h5>Recent Events Searched:</h5>
+            <p id="recentEventList"></p>
+
         </div>
     </section>
 
